--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/bodyfx-com/*"
+    to = "https://bodyfx.com/:splat"
+
+[[redirects]]
+    from = "https://amp.bodyfx.com/*"
+    to = "https://bodyfx.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/feeleven-com/*"
     to = "https://feeleven.com/:splat"
 
