--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/judy-co/*"
+    to = "https://judy.co/:splat"
+
+[[redirects]]
+    from = "https://amp.judy.co/*"
+    to = "https://judy.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/bodyfx-com/*"
     to = "https://bodyfx.com/:splat"
 
