--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/valentinobeautypure-com/*"
+    to = "https://shop.valentinobeautypure.com/:splat"
+
+[[redirects]]
+    from = "https://amp.valentinobeautypure.com/*"
+    to = "https://valentinobeautypure.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/bodybuilding-com/*"
     to = "https://www.bodybuilding.com/:splat"
 
