--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/imperiacaviar-com/*"
+    to = "https://imperiacaviar.com/:splat"
+
+[[redirects]]
+    from = "https://amp.imperiacaviar.com/*"
+    to = "https://imperiacaviar.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/aquis-com/*"
     to = "https://aquis.com/:splat"
 
