Starbridge Recovery add

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/starbridgerecovery-com/*"
+    to = "https://starbridgerecovery.com/:splat"
+
+[[redirects]]
+    from = "https://amp.starbridgerecovery.com/*"
+    to = "https://starbridgerecovery.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/imperiacaviar-com/*"
     to = "https://imperiacaviar.com/:splat"
 
