--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/gleamin-com/*"
+    to = "https://gleamin.com/:splat"
+
+[[redirects]]
+    from = "https://amp.gleamin.com/*"
+    to = "https://gleamin.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/hammitt-com/*"
     to = "https://hammitt.com/:splat"
 
