--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [[redirects]]
     from = "/*"
     to = "https://www.intotheam.com/:splat"
-
+    status = 200
+    force = true
 [[headers]]
   for = "/.well-known/amphtml/apikey.pub"
   [headers.values]
