--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/uprisingfood-com/*"
+    to = "https://uprisingfood.com/:splat"
+
+[[redirects]]
+    from = "https://amp.uprisingfood.com/*"
+    to = "https://uprisingfood.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "https://amp.iheartraves.com/*"
     to = "https://iheartraves.gr0.app/:splat"
     status = 200
