--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/lthrshaving-com/*"
+    to = "https://lthrshaving.com/:splat"
+
+[[redirects]]
+    from = "https://amp.lthrshaving.com/*"
+    to = "https://lthrshaving.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/milanicosmetics-com/*"
     to = "https://milanicosmetics.com/:splat"
 
