--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,14 @@
 [[redirects]]
+    from = "/thistle-co/*"
+    to = "https://thistle.co/:splat"
+
+[[redirects]]
+    from = "https://amp.thistle.co/*"
+    to = "https://thistle.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "/lthrshaving-com/*"
     to = "https://lthrshaving.com/:splat"
 
