--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
 [[redirects]]
+    from = "https://amp.121ecommerce.com/*"
+    to = "https://121ecommerce.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "https://amp.drinkbev.com/*"
     to = "https://drinkbev.gr0.app/:splat"
     status = 200
