--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
 [[redirects]]
+    from = "https://amp.skinte.com/*"
+    to = "https://skinte.gr0.app/:splat"
+    status = 200
+    force = true
+
+[[redirects]]
     from = "https://amp.goodstuffapparel.com/*"
     to = "https://goodstuffapparel.gr0.app/:splat"
     status = 200
