--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-    from = "https://amp.skinte.com/*"
+    from = "https://go.skinte.com/*"
     to = "https://skinte.gr0.app/:splat"
     status = 200
     force = true
